// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.
syntax = "proto3";

package mz_compute_types.time_dependence;

import "google/protobuf/empty.proto";
import "proto/src/proto.proto";
import "repr/src/refresh_schedule.proto";

message ProtoTimeDependence {
  message ProtoRefreshSchedule {
    optional mz_repr.refresh_schedule.ProtoRefreshSchedule refresh_schedule = 1;
    repeated ProtoTimeDependence dependence = 2;
  }

  oneof kind {
    ProtoRefreshSchedule RefreshSchedule = 1;
    google.protobuf.Empty Wallclock = 2;
  }
}
